overflowing so fix style to prevent it

--- a/public/CSS/Hero_Section.css
+++ b/public/CSS/Hero_Section.css
@@ -11,7 +11,7 @@
     margin-top: 8rem;
 }
 .hero-container .hero-slider .hero-slider-image{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     object-fit: cover;
     position: absolute;
@@ -22,7 +22,7 @@
 .hero-container .hero-slider::before{
     content: "";
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgba(2, 2, 2, 0.488);
     top: 0;
